--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.4",
     "ngrok": "^3.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
