--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-timeline-scribble": "^1.0.14"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
