--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "ngrok": "^3.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
