--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nestrannyconseil",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.9.0",
+    "node": "10.15.1"
+  },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.4",
