--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
+    "leaflet": "^1.6.0",
     "ngrok": "^3.1.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^2.6.3",
     "react-parallax": "^2.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
