--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "emailjs-com": "^2.4.1",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
     "leaflet": "^1.6.0",
