--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-parallax": "^2.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^5.0.1",
     "react-timeline-scribble": "^1.0.14"
   },
   "scripts": {
